# cpp_r-type

./: .gitignore  README.md
client/: .clang_complete  Animation.hpp  CMakeLists.txt  Makefile  rtype_client.sln  rtype_client.vcxproj
client/inc/: AComponent.hpp  ASocket.hpp  Animation.hpp  Button.hpp  Core.hpp  Game.hpp  Graphique.hpp  Object.hpp  PlayerLink.hpp  Room.hpp  RoomManager.hpp  Scene.hpp  Socket.hpp  Sprite.hpp
client/inc/SFML2.2/: Audio.hpp  Graphics.hpp  Main.hpp  Network.hpp  OpenGL.hpp  System.hpp  Window.hpp
client/inc/SFML2.2/Audio/: Export.hpp  Listener.hpp  Music.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
client/inc/SFML2.2/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glyph.hpp  Image.hpp  Rect.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  (+1 more)
client/lib/: libGLEW.so.1.13  libsfml-graphics.so.2.2.0  libsfml-network.so.2.2.0  libsfml-window.so.2.2.0
client/src/: AComponent.cpp  ASocket.cpp  Animation.cpp  Button.cpp  Core.cpp  Game.cpp  Graphique.cpp  Main.cpp  Object.cpp  PlayerLink.cpp  Room.cpp  RoomManager.cpp  Scene.cpp  Socket.cpp  Sprite.cpp
server/: CMakeLists.txt  Makefile  config.ini
server/inc/: AClient.hpp  AComponent.hh  AComponent.hpp  ASocket.hpp  AThread.hpp  Client.hpp  Configuration.hh  Core.hpp  Hitbox.hh  IAI.hpp  INetwork.hpp  Level.hh  LevelMapping.hh  LevelMappingMap.hh  LevelMappingObject.hh  LinuxConnection.hpp  Object.hh  Player.hpp  Relationnals.hpp  Room.hpp  Socket.hpp  Sprite.hh  ThreadLinux.hpp
server/src/: AClient.cpp  AComponent.cpp  ASocket.cpp  AThread.cpp  Client.cpp  Configuration.cpp  Core.cpp  Hitbox.cpp  IAI.cpp  Level.cpp  LinuxConnection.cpp  Object.cpp  Player.cpp  Room.cpp  Socket.cpp  Sprite.cpp  ThreadLinux.cpp  main.cpp
server/src/LevelMapping/: LevelMapping.cpp  LevelMappingMap.cpp  LevelMappingObject.cpp
tests/LevelMapping/: CMakeLists.txt  level
tests/LevelMapping/src/: main.cpp
(+45 files in other folders)
